# caret

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DEEP_DIVE.md  LICENSE  README.md  Viral Git Project Launch Strategy.md  benchmark_vs_pandas.py  test_data.jsonl
.github/workflows/: ci.yml
src/: app.rs  commands.rs  data.rs  engine.rs  fixer.rs  format.rs  lib.rs  linter.rs  main.rs  mcp.rs  streaming.rs  tokenizer.rs  tui.rs  ui.rs
