[package]
name = "caret"
version = "0.2.0"
edition = "2021"
description = "A blazingly fast TUI for inspecting and curating LLM training datasets"
authors = ["Caret Contributors"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rayanouaddi/caret"
homepage = "https://github.com/rayanouaddi/caret"
keywords = ["tui", "llm", "dataset", "tokenizer", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.29.0"
crossterm = "0.28.0"
memmap2 = "0.9.0"
tokenizers = { version = "0.20.0", features = ["http"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
argh = "0.1.13"
anyhow = "1.0"
regex = "1.10"
lru = "0.12"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
opt-level = 3

[dev-dependencies]
tempfile = "3.24.0"
